[gd_scene load_steps=27 format=3 uid="uid://ct4slj3ni7ajm"]

[ext_resource type="Script" uid="uid://bm2ln7ilo358i" path="res://scenes/mainMenuScenes/titleScreen.gd" id="1_r8sye"]
[ext_resource type="PackedScene" uid="uid://cyxcc8cu3d5e0" path="res://scenes/mainMenuScenes/titleScreenBackground.tscn" id="2_hbqqx"]
[ext_resource type="Shader" uid="uid://c6vv0lnajgu50" path="res://scenes/mainMenuScenes/titleBlur.gdshader" id="3_hh3dy"]
[ext_resource type="Texture2D" uid="uid://dfv7dtytutrjb" path="res://assets/sprites/logo.png" id="3_tcfyk"]
[ext_resource type="Texture2D" uid="uid://b35ktn55n6hs6" path="res://assets/icons/menu/login.svg" id="4_ccak3"]
[ext_resource type="Texture2D" uid="uid://br5pconpfvi31" path="res://assets/icons/menu/quit.svg" id="4_ful2y"]
[ext_resource type="Texture2D" uid="uid://bfi0g1oemgw0c" path="res://assets/icons/menu/play.svg" id="4_qrvv6"]
[ext_resource type="Texture2D" uid="uid://eail6ics4jca" path="res://assets/icons/menu/how2play.svg" id="5_c3ue1"]
[ext_resource type="Texture2D" uid="uid://8i46x07ygs5b" path="res://assets/icons/menu/stats.svg" id="6_2i8gq"]
[ext_resource type="Texture2D" uid="uid://dn8uyrj5k6rm" path="res://assets/icons/menu/settings.svg" id="7_nwd4p"]
[ext_resource type="Texture2D" uid="uid://cyf3f160k5hsb" path="res://assets/icons/menu/credits.svg" id="8_6g5lf"]
[ext_resource type="PackedScene" uid="uid://ctscjj5oow5p8" path="res://scenes/mainMenuScenes/settings.tscn" id="10_c3ue1"]
[ext_resource type="PackedScene" uid="uid://baj1kv3f0etgu" path="res://scenes/mainMenuScenes/how2play.tscn" id="10_nwd4p"]
[ext_resource type="PackedScene" uid="uid://c8iabuhhf3o4e" path="res://scenes/mainMenuScenes/loadingScreen.tscn" id="11_2i8gq"]
[ext_resource type="PackedScene" uid="uid://ctvw0dwc2i0jh" path="res://scenes/mainMenuScenes/stats.tscn" id="11_67agi"]
[ext_resource type="PackedScene" uid="uid://sjpr02b42usg" path="res://scenes/mainMenuScenes/gameModeSel.tscn" id="11_apxgw"]
[ext_resource type="Texture2D" uid="uid://rjgk13wjchxn" path="res://assets/icons/menu/logout.svg" id="11_hbqqx"]
[ext_resource type="PackedScene" uid="uid://diw1m0fahrmp7" path="res://scenes/login.tscn" id="11_mkk3h"]
[ext_resource type="PackedScene" uid="uid://blnrook2q0vnj" path="res://scenes/mainMenuScenes/credits.tscn" id="14_d7my7"]
[ext_resource type="AudioStream" uid="uid://cabmj8c7u32pt" path="res://assets/music/ultimateTruth.ogg" id="20_5ur3r"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hh3dy"]
shader = ExtResource("3_hh3dy")
shader_parameter/lod = 2.750000130625

[sub_resource type="LabelSettings" id="LabelSettings_c3ue1"]
font_size = 12
shadow_color = Color(0, 0, 0, 0.5019608)

[sub_resource type="LabelSettings" id="LabelSettings_vpt7i"]
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.5019608)

[sub_resource type="LabelSettings" id="LabelSettings_qrvv6"]
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.5019608)

[sub_resource type="LabelSettings" id="LabelSettings_tcfyk"]
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.5019608)

[sub_resource type="LabelSettings" id="LabelSettings_wxefk"]
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.5019608)

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_r8sye")

[node name="TitleScreenBackground" parent="." instance=ExtResource("2_hbqqx")]

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_hh3dy")
use_parent_material = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -384.0
offset_right = 512.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2

[node name="Logo" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -375.0
offset_top = 40.0
offset_right = 375.0
offset_bottom = 265.0
grow_horizontal = 2
texture = ExtResource("3_tcfyk")
expand_mode = 3

[node name="MenuBtnContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 280.0
offset_right = 180.0
offset_bottom = 480.0
grow_horizontal = 2
alignment = 1

[node name="StartGame" type="Button" parent="MenuBtnContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Start Game"
icon = ExtResource("4_qrvv6")
alignment = 0
icon_alignment = 2
expand_icon = true

[node name="HBoxContainer1" type="HBoxContainer" parent="MenuBtnContainer"]
layout_mode = 2
alignment = 1

[node name="How2Play" type="Button" parent="MenuBtnContainer/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "How to Play"
icon = ExtResource("5_c3ue1")
alignment = 0
icon_alignment = 2
expand_icon = true

[node name="Statistics" type="Button" parent="MenuBtnContainer/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Statistics"
icon = ExtResource("6_2i8gq")
alignment = 0
icon_alignment = 2
expand_icon = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuBtnContainer"]
layout_mode = 2

[node name="Settings" type="Button" parent="MenuBtnContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Settings"
icon = ExtResource("7_nwd4p")
alignment = 0
icon_alignment = 2
expand_icon = true

[node name="Credits" type="Button" parent="MenuBtnContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Credits"
icon = ExtResource("8_6g5lf")
alignment = 0
icon_alignment = 2
expand_icon = true

[node name="QuitGame" type="Button" parent="MenuBtnContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.88, 0.42240003, 0.42240003, 1)
theme_override_colors/font_focus_color = Color(1, 0.48235294, 0.48235294, 1)
theme_override_colors/font_pressed_color = Color(1, 0.48235294, 0.48235294, 1)
theme_override_colors/font_hover_color = Color(1, 0.48235294, 0.48235294, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.48235294, 0.48235294, 1)
theme_override_colors/font_disabled_color = Color(1, 0.48235294, 0.48235294, 0.5019608)
theme_override_font_sizes/font_size = 24
text = "Quit Game"
icon = ExtResource("4_ful2y")
alignment = 0
icon_alignment = 2
expand_icon = true

[node name="NotImplementedFIY" type="Label" parent="MenuBtnContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
text = "This game is still under heavy development, so expect some bugs..."
label_settings = SubResource("LabelSettings_c3ue1")
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3

[node name="AccountContainer" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="AccountLabel" type="Label" parent="AccountContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Welcome, Guest!
You are not logged in."
label_settings = SubResource("LabelSettings_vpt7i")
horizontal_alignment = 2

[node name="LoginTitleButton" type="Button" parent="AccountContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 8
disabled = true
text = "Login"
icon = ExtResource("4_ccak3")
icon_alignment = 2
expand_icon = true

[node name="LogoutTitleButton" type="Button" parent="AccountContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(1, 0.48235294, 0.48235294, 1)
theme_override_colors/font_focus_color = Color(1, 0.48235294, 0.48235294, 1)
theme_override_colors/font_pressed_color = Color(1, 0.48235294, 0.48235294, 1)
theme_override_colors/font_hover_color = Color(1, 0.48235294, 0.48235294, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.48235294, 0.48235294, 1)
theme_override_colors/font_disabled_color = Color(1, 0.48235294, 0.48235294, 0.5019608)
text = "Logout"
icon = ExtResource("11_hbqqx")
icon_alignment = 2
expand_icon = true

[node name="Copyleft" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -23.0
offset_right = 84.0
grow_horizontal = 2
grow_vertical = 0
text = "Technical Development Build
LohinSys (É”) 2024-2026"
label_settings = SubResource("LabelSettings_qrvv6")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Login" parent="." instance=ExtResource("11_mkk3h")]
visible = false

[node name="GameModeSel" parent="." instance=ExtResource("11_apxgw")]
visible = false

[node name="How2Play" parent="." instance=ExtResource("10_nwd4p")]
visible = false

[node name="Stats" parent="." instance=ExtResource("11_67agi")]
visible = false

[node name="Settings" parent="." instance=ExtResource("10_c3ue1")]
visible = false

[node name="Credits" parent="." instance=ExtResource("14_d7my7")]
visible = false

[node name="DbgInfo" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -18.0
offset_right = 44.0
grow_vertical = 0
text = "v0.0.0
Renderer: -"
label_settings = SubResource("LabelSettings_tcfyk")
vertical_alignment = 2

[node name="Fps" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -18.0
grow_horizontal = 0
grow_vertical = 0
text = "0 fps"
label_settings = SubResource("LabelSettings_wxefk")
horizontal_alignment = 2
vertical_alignment = 2

[node name="LoadingScreen" parent="." instance=ExtResource("11_2i8gq")]
visible = false

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_5ur3r")
autoplay = true
bus = &"Music"
parameters/looping = true

[connection signal="pressed" from="MenuBtnContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MenuBtnContainer/HBoxContainer1/How2Play" to="." method="_on_how2play_pressed"]
[connection signal="pressed" from="MenuBtnContainer/HBoxContainer1/Statistics" to="." method="_on_statistics_pressed"]
[connection signal="pressed" from="MenuBtnContainer/HBoxContainer2/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MenuBtnContainer/HBoxContainer2/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MenuBtnContainer/QuitGame" to="." method="_on_quit_game_pressed"]
[connection signal="pressed" from="AccountContainer/LoginTitleButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="AccountContainer/LogoutTitleButton" to="." method="_on_logout_button_pressed"]
[connection signal="hidden" from="Login" to="." method="_on_login_hidden"]
